--- a/index.html
+++ b/index.html
@@ -122,85 +122,69 @@
   <div class="max-w-5xl mx-auto px-5">
     <h2 class="text-3xl font-bold text-center mb-10">⚔️ Projek</h2>
 
-<!-- PROJEK SECTION -->
-<section id="projek" class="relative bg-[#0b0b0e] py-24">
-  <div class="mx-auto max-w-6xl px-4">
-    <div class="text-center mb-12">
-      <h2 class="text-3xl sm:text-4xl font-extrabold text-[var(--gold)] tracking-wide">⚔️ Project — Panglima Islam</h2>
-      <p class="mt-3 text-zinc-200 max-w-2xl mx-auto">Menghidupkan semangat para panglima: keberanian, ilmu, dan iman. Konten sejarah dikemas modern untuk generasi hari ini.</p>
-    </div>
-
+<!-- PROJECT SECTION SEMUA -->
+<section id="projek" class="bg-[#0b0b0e] py-24">
+  <div class="max-w-6xl mx-auto px-4">
+    <h2 class="text-3xl sm:text-4xl font-extrabold text-[var(--gold)] text-center mb-12">⚔️ Projek Panglima Islam</h2>
     <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6">
 
       <!-- E-Book SKI -->
-      <div class="glass rounded-2xl p-6 border border-white/10 slide-up card-hover cursor-pointer">
+      <div class="bg-[#1a1a1a] p-6 rounded-2xl shadow-lg hover:shadow-xl transition-all">
         <h3 class="text-xl font-semibold text-[var(--gold)]">📖 E-Book SKI</h3>
-        <p class="mt-2 text-sm text-zinc-300">Kumpulan artikel, refleksi, kisah tokoh & perang Islam untuk santri zaman sekarang.</p>
-        <span class="mt-4 inline-flex w-fit rounded-full bg-white/10 px-3 py-1 text-xs">Status: Proses</span>
-        <button onclick="toggleEbook()" class="mt-4 w-full bg-[var(--gold)] text-black font-semibold py-2 rounded-lg hover:brightness-110 transition">Lihat Isi</button>
-
-        <!-- Accordion isi E-Book -->
-        <div id="ebookContent" class="mt-4 hidden space-y-3 text-zinc-100">
-          <div>
-            <h4 class="font-semibold text-[var(--gold)]">📑 Artikel</h4>
-            <ul class="list-disc list-inside ml-4">
-              <li><a href="pdf/artikelski/ArtikelSKI.pdf" target="_blank" class="hover:underline">Artikel SKI: Pentingnya Sejarah Islam</a></li>
-            </ul>
+        <p class="mt-2 text-sm text-zinc-300">Kumpulan artikel, kisah, dan refleksi tentang sejarah Islam.</p>
+        <button onclick="toggleAccordion('ebook-accordion')" class="mt-4 w-full bg-[var(--gold)] text-black py-2 rounded-lg">Lihat Isi</button>
+        <div id="ebook-accordion" class="mt-4 hidden">
+          <div class="mt-2">
+            <h4 class="font-semibold text-[var(--gold)]">Artikel</h4>
+            <a href="pdf/artikelski/ArtikelSKI.pdf" class="text-yellow-400 hover:underline">Artikel SKI: Pentingnya Sejarah Islam</a>
           </div>
-          <div>
-            <h4 class="font-semibold text-[var(--gold)]">📜 Kisah</h4>
-            <ul class="list-disc list-inside ml-4">
-              <li><a href="#" class="hover:underline">Kisah Khalid bin Walid</a></li>
-            </ul>
+          <div class="mt-2">
+            <h4 class="font-semibold text-[var(--gold)]">Kisah</h4>
+            <p class="text-zinc-300">Kisah Khalid bin Walid: Pedang Allah yang Terhunus</p>
           </div>
-          <div>
-            <h4 class="font-semibold text-[var(--gold)]">🌿 Refleksi</h4>
-            <ul class="list-disc list-inside ml-4">
-              <li><a href="#" class="hover:underline">Cerita: Berjuang di NJ Bali</a></li>
-            </ul>
+          <div class="mt-2">
+            <h4 class="font-semibold text-[var(--gold)]">Refleksi</h4>
+            <p class="text-zinc-300">Cerita Perjuangan di NJ Bali: Santri yang Berjuang</p>
           </div>
         </div>
       </div>
 
       <!-- Mini Drama -->
-      <div class="glass rounded-2xl p-6 border border-white/10 slide-up card-hover cursor-pointer">
+      <div class="bg-[#1a1a1a] p-6 rounded-2xl shadow-lg hover:shadow-xl transition-all">
         <h3 class="text-xl font-semibold text-[var(--gold)]">🎭 Mini Drama</h3>
-        <p class="mt-2 text-sm text-zinc-300">Drama pendek yang menghidupkan kisah para panglima.</p>
-        <span class="mt-4 inline-flex w-fit rounded-full bg-white/10 px-3 py-1 text-xs">Status: Ada</span>
-        <a href="assets/snaptik_7440809015132687671_v2.mp4" target="_blank" class="mt-4 inline-block bg-[var(--gold)] text-black font-semibold py-2 px-4 rounded-lg hover:brightness-110 transition">Tonton Video</a>
+        <p class="mt-2 text-sm text-zinc-300">Drama pendek karya santri NJ Bali. Saat ini: Drama Perang Yamamah.</p>
+        <a href="assets/snaptik_7440809015132687671_v2.mp4" class="mt-4 inline-block bg-[var(--gold)] text-black py-2 px-4 rounded-lg">Tonton Video</a>
       </div>
 
       <!-- Karya Santri -->
-      <div class="glass rounded-2xl p-6 border border-white/10 slide-up card-hover cursor-pointer">
+      <div class="bg-[#1a1a1a] p-6 rounded-2xl shadow-lg hover:shadow-xl transition-all">
         <h3 class="text-xl font-semibold text-[var(--gold)]">✍️ Karya Santri</h3>
-        <p class="mt-2 text-sm text-zinc-300">Puisi, tulisan, atau gambar hasil kolaborasi adik-adik santri.</p>
-        <span class="mt-4 inline-flex w-fit rounded-full bg-white/10 px-3 py-1 text-xs">Status: Rencana</span>
-        <div class="mt-4">
-          <p class="italic text-zinc-100">"Santri menuntut ilmu, menapaki jalan cahaya, semangat tak pernah padam."</p>
-        </div>
+        <p class="mt-2 text-sm text-zinc-300">Puisi, tulisan, dan karya kreatif santri.</p>
+        <blockquote class="mt-4 text-zinc-100 italic">
+          "Menuntut ilmu sepanjang hayat, di pondok hati ditempa kuat, sabar jadi cahaya penuntun, santri berjuang demi ridha Tuhan."
+        </blockquote>
       </div>
 
       <!-- Publikasi -->
-      <div class="glass rounded-2xl p-6 border border-white/10 slide-up card-hover cursor-pointer">
+      <div class="bg-[#1a1a1a] p-6 rounded-2xl shadow-lg hover:shadow-xl transition-all">
         <h3 class="text-xl font-semibold text-[var(--gold)]">📢 Publikasi</h3>
-        <p class="mt-2 text-sm text-zinc-300">Menyebarkan karya di IG, TikTok, YouTube & forum diskusi santri NJ Bali.</p>
-        <span class="mt-4 inline-flex w-fit rounded-full bg-white/10 px-3 py-1 text-xs">Status: Coming Soon</span>
-        <div class="mt-4 flex gap-3 text-2xl">
-          <a href="https://www.instagram.com/irvnafndi/" class="hover:text-pink-400 transition"><i class="ph ph-instagram-logo"></i></a>
-          <a href="https://www.tiktok.com/@afaniyah_" class="hover:text-red-400 transition"><i class="ph ph-tiktok-logo"></i></a>
+        <p class="mt-2 text-sm text-zinc-300">Menyebarkan karya melalui media digital.</p>
+        <div class="mt-4 flex flex-col gap-2">
+          <a href="https://www.instagram.com/irvnafndi/" class="text-pink-400 hover:underline">Instagram</a>
+          <a href="https://www.tiktok.com/@afaniyah_" class="text-red-400 hover:underline">TikTok</a>
         </div>
       </div>
 
     </div>
   </div>
-
-  <script>
-    function toggleEbook() {
-      const content = document.getElementById('ebookContent');
-      content.classList.toggle('hidden');
-    }
-  </script>
 </section>
+
+<script>
+  function toggleAccordion(id) {
+    const el = document.getElementById(id);
+    el.classList.toggle('hidden');
+  }
+</script>
 
 <style>
   /* Animasi fade-in tab */
