--- a/index.html
+++ b/index.html
@@ -192,8 +192,11 @@
       <p>Kisah Khalid bin Walid: Pedang Allah yang Terhunus. Khalid bin Walid dikenal sebagai Panglima Islam yang tak terkalahkan dalam banyak pertempuran. Strategi, keberanian, dan keteguhan imannya menjadi teladan bagi generasi Muslim berikutnya.</p>
     </div>
     <div id="tab-refleksi" class="tab-content hidden max-h-80 overflow-y-auto text-zinc-300">
-      <p>Refleksi perjalanan santri di pondok NJ Bali: Kesabaran, ketekunan, dan pengabdian adalah kunci meraih ridha Allah. Setiap ujian di pondok menjadi pelajaran berharga bagi kehidupan dan ibadah sehari-hari.</p>
-    </div>
+  <h4 class="text-lg font-semibold mb-2 text-[var(--gold)]">Refleksi Santri NJ Bali</h4>
+  <p class="mb-2">Perjalanan santri di pondok NJ Bali penuh tantangan. Kesabaran, ketekunan, dan disiplin menjadi fondasi utama dalam menuntut ilmu dan membentuk karakter.</p>
+  <p class="mb-2">Setiap ujian—baik dalam belajar, kepemimpinan, maupun interaksi sosial—menjadi pelajaran berharga. Dengan doa dan tawakal, santri belajar untuk mengandalkan Allah dalam setiap langkah hidup.</p>
+  <p class="mb-2">Refleksi ini bertujuan mengingatkan kita bahwa perjuangan di pondok bukan sekadar menuntut ilmu, tapi juga membentuk pribadi yang siap menghadapi dunia dengan iman dan akhlak mulia.</p>
+</div>
   </div>
 </div>
 
